# pico-faces

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: rust.yml
distance_friend/: Cargo.toml  build.rs  rust-toolchain.toml
distance_friend/src/: lib.rs  main.rs
distance_friend/src/face/: basic_face.rs  basic_face_smile.rs  basic_no_eyebrows.rs  circle_face.rs  connecting.rs  connection_failed.rs  message_face.rs  message_waiting.rs  mod.rs  semi_circle_face.rs  sleeping_face.rs
distance_friend/src/face/eye/: basic_eye.rs  circle_eye.rs  mod.rs  semi_circle_eye.rs
distance_friend/src/face/eyebrow/: basic_eyebrow.rs  mod.rs
distance_friend/src/face/mouth/: mod.rs  smile.rs
distance_friend/src/utils/: display.rs  messages.rs  mod.rs  mqtt.rs  net.rs  re_input.rs  select_face.rs
distance_friend_core/: Cargo.toml  rust-toolchain.toml
distance_friend_core/src/: lib.rs
