[workspace]

resolver = "2"

members = [
    "distance_friend",
    "distance_friend_core",
]

[profile.dev]
debug = 1
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[workspace.dependencies]
defmt = "1.0.1"
serde = {version = "1.0.219", default-features = false }
postcard = "1.1.1"
mqttrs = { git = "https://github.com/00imvj00/mqttrs.git", rev = "dd9d381b401b1b7353c43b36123f1b2ea5fa80a1", default-features = false }
