[package]
name = "distance_friend"
version = "0.1.0"
edition = "2024"

[dependencies]
cyw43 = { optional = true, version = "0.1.0", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { optional = true, version = "0.1.0", features = ["defmt", "overclock"] }
embassy-executor = { version = "0.5.0", optional = true, features = [
    "task-arena-size-131072",
    "arch-cortex-m", 
    "executor-thread", 
    "executor-interrupt", 
    "defmt", 
    "integrated-timers"
] }

embassy-time = { optional = true, version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

embassy-rp = { version = "0.1.0", optional = true, features = [
    "defmt",
    "unstable-pac",
    "time-driver",
]}

embassy-futures = { version = "0.1.0", optional = true, features = [
    "defmt",
] }

embassy-net = { version = "0.4.0", optional = true, features = [
    "defmt", 
    "tcp", 
    "udp", 
    "dhcpv4", 
    "medium-ethernet",
    "dns"
]}

embassy-boot-rp = { version = "0.2.0" , optional = true}
embassy-sync = { version = "0.5.0", optional = true }
embassy-usb = { version = "0.1.0", optional = true}

static_cell = { version = "1.1", features = ["nightly"]}

defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", optional = true, features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", optional = true}
pio-proc = "0.2"
pio = "0.2.1"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
embedded-hal-1 = { optional = true, package = "embedded-hal", version = "1.0.0-rc.3" }
embedded-hal-async = { optional = true, version = "1.0.0-rc.1"}
heapless = "0.7.16"
log = "0.4.19"
byte = "0.2"
arrayvec = { version = "0.7.4", default-features = false }
dotenvy_macro = "0.15.7"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
defmt-serial = "0.10.0"
rtt-target = "0.4.0"
portable-atomic = "1.6.0"

# workspace dependencies
defmt.workspace = true
serde.workspace = true
postcard.workspace = true
mqttrs.workspace = true
distance_friend_core = { path = "../distance_friend_core" }

[features]
embedded = [
    "dep:embassy-rp", 
    "dep:cyw43", 
    "dep:cyw43-pio",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-futures",
    "dep:embassy-net",
    "dep:embassy-usb",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:embedded-hal-1",
    "dep:embedded-hal-async",
    "dep:embassy-boot-rp",
    "dep:embassy-sync",
]

default = ["embedded", "one"] 

w = []
m = []
one = []
two = []


