[package]
name = "distance_friend"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.3.0", optional = true, features = ["defmt"] }
embassy-sync = { version = "0.7.0", optional = true, features = ["defmt"] }
embassy-executor = { version = "0.7.0", optional = true, features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-40960"] }
embassy-time = { version = "0.4.0", optional = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", optional = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", optional = true, features = ["defmt"] }
embassy-net = { version = "0.7.0", optional = true, features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.0", optional = true, features = ["defmt"] }
embassy-futures = { version = "0.1.1", optional = true }
embassy-usb-logger = { version = "0.4.0", optional = true }
cyw43 = { version = "0.3.0", optional = true, features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", optional = true, features = ["defmt"] }

cortex-m = { version = "0.7.7", optional = true, features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5", optional = true}
critical-section = "1.2"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal-1 = {optional = true, package = "embedded-hal", version = "1.0" }
embedded-hal-async = { optional = true, version = "1.0" }
embedded-hal-bus = {optional = true, version = "0.3", features = ["async"] }
embedded-io-async = {optional = true, version = "0.6.1", features = ["defmt-03"] }
embedded-storage = {optional = true, version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.11", features = ["critical-section"] }

defmt-rtt = "1.0"

pio-proc = "0.3"
pio = "0.3.0"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
heapless = "0.8"
log = "0.4.27"
byte = "0.2"
arrayvec = { version = "0.7.6", default-features = false }
dotenvy_macro = "0.15.7"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
defmt-serial = "0.10.0"
rtt-target = "0.6.1"

# workspace dependencies
defmt.workspace = true
serde.workspace = true
postcard.workspace = true
mqttrs.workspace = true
distance_friend_core = { path = "../distance_friend_core" }

[features]
embedded = [
    "dep:embassy-embedded-hal", 
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-usb",
    "dep:embassy-net",
    "dep:embassy-net-wiznet",
    "dep:embassy-futures",
    "dep:embassy-usb-logger",
    "dep:cyw43", 
    "dep:cyw43-pio",

    # Non Core embassy deps
    "dep:cortex-m",
    "dep:cortex-m-rt",

    # General embedded deps
    "dep:embedded-hal-1",
    "dep:embedded-hal-async",
    "dep:embedded-hal-bus",
    "dep:embedded-io-async",
    "dep:embedded-storage",
]

default = ["embedded", "one"] 

w = []
m = []
one = []
two = []


