[package]
name = "distance_friend_core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# workspace dependencies
defmt.workspace = true
serde.workspace = true
postcard.workspace = true
mqttrs.workspace = true
